--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=ggcgc
 EMBEDDING_MODEL=all-MiniLM-L6-v2
 
 # Ganti embending model dan masukan API key OpenAI jika ingin menggunakan OpenAI, Groq API tetap digunakan
